benchmark-results/8/merge/cseq/concurrentwitness2test.2024-11-27_10-15-16.logfiles/SV-COMP23_unreach-call.cseq-mix030_tso.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix030_tso.yml/mix030_tso.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix030_tso.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_l9gkupei/tmp/tmpxofjr87_.c
Compilation started
/tmp/BenchExec_run_l9gkupei/tmp/tmpxofjr87_.c: In function ‘P3’:
/tmp/BenchExec_run_l9gkupei/tmp/tmpxofjr87_.c:640:19: error: ‘FALSE’ undeclared (first use in this function)
  640 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_l9gkupei/tmp/tmpxofjr87_.c:640:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_l9gkupei/tmp/tmpxofjr87_.c:641:19: error: ‘TRUE’ undeclared (first use in this function)
  641 |   weak$$choice2 = TRUE;;
      |                   ^~~~
/tmp/BenchExec_run_l9gkupei/tmp/tmpxofjr87_.c: In function ‘main’:
/tmp/BenchExec_run_l9gkupei/tmp/tmpxofjr87_.c:721:19: error: ‘FALSE’ undeclared (first use in this function)
  721 |   weak$$choice0 = FALSE;;
      |                   ^~~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
